# annotation-pipeline-skill

./: .gitignore  AGENTS.md  CHANGELOG.md  PRODUCT_DESIGN.md  README.md  SKILL.md  TECHNICAL_ARCHITECTURE.md  VERIFY_MANAGER_CYCLES_TEST_PLAN.md  pyproject.toml
docs/: RUNTIME_DESIGN.md  agent-operator-guide.md  algorithm-engineer-user-story.md
scripts/: audit_export_quality.py  audit_verbatim_accepted.py  backfill_annotator_replies.py  backfill_entity_conventions.py  backfill_recovery_loop_audit.py  bootstrap_entity_statistics.py  migrate_filestore_to_sqlite.py  migrate_phrase_format.py  serve_dashboard.sh  verify_agent_handoff.sh  verify_export_training_data.sh  verify_external_pull.sh  verify_memory_ner_accepted_e2e.sh  verify_memory_ner_truth_eval.sh  verify_memory_ner_ui_acceptance.sh  verify_outbox_dispatch.sh  verify_real_codex_project.sh  verify_runtime_codex_smoke.sh  verify_runtime_deepseek_smoke.sh  verify_runtime_e2e.sh  verify_runtime_progress.sh  verify_skill_installability.sh
tests/: test_annotator_selector.py  test_bootstrap_entity_statistics.py  test_cli.py  test_config_loader.py  test_coordinator_service.py  test_dashboard_api.py  test_dashboard_api_threaded.py  test_dashboard_snapshot.py  test_entity_statistics_schema.py  test_entity_statistics_service.py  test_export_service.py  test_external_task_pull.py  test_feedback_and_external.py  test_file_store.py  test_human_review_service.py  test_llm_profiles.py  test_llm_profiles_resolution.py  test_local_cli_client.py  test_local_cycle.py  test_local_runtime_scheduler.py  test_migrate_filestore.py  test_models_and_transitions.py  test_openai_compatible_client.py  test_openai_responses_client.py  test_outbox_dispatch.py  test_posterior_audit_api.py  (+16 more)
(+122 files in other folders)
