[project]
name = "annotation-pipeline-skill"
version = "0.1.0"
description = "Local-first annotation pipeline skill foundation"
requires-python = ">=3.11"
dependencies = [
  "pyyaml>=6.0",
]

[project.scripts]
annotation-pipeline = "annotation_pipeline_skill.interfaces.cli:console_main"

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
